--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ node_modules/
 /playwright/.cache/
 /playwright/.auth/
 /testSessionStorage/
+/visualTesting.spec.ts-snapshots/
+/mobile_test.spec.ts-snapshots/
+allure-results
