--- a/.github/workflows/featureBranch.yaml
+++ b/.github/workflows/featureBranch.yaml
@@ -1,61 +1,79 @@
 name: Feature Branch Workflow
 
 on:
-  pull_request:
-    branches-ignore:
-      - main
+  push:
+    branches:
+      - main # Run when a PR targets main (adjust if needed)
 
 jobs:
   e2e-tests:
     name: Test Feature
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [20]
 
-      steps:
-        - name: Remove package-lock
-          run: rm package-lock.json
+    steps:
+      # 🪄 Checkout code
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Install packages
-          run: npm i -D @types/node
+      # 🧰 Setup Node.js
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
 
-        - name: Install dependencies
-          run: npm ci
+      # 🧹 Optional cleanup
+      - name: Remove package-lock
+        run: rm -f package-lock.json
 
-        - name: Install Playwright Browsers
-          run: npx playwright install --with-deps
+      # 📦 Install dependencies
+      - name: Install packages
+        run: npm i -D @types/node
 
-        - name: Run Playwright tests
-          run: npm run test
+      - name: Install dependencies
+        run: npm ci
 
-        - name: Get Allure history
-          uses: actions/checkout@v4
-          #continue-on-error: true
-          with:
-            ref: gh-pages
-            path: gh-pages
+      # 🎭 Install Playwright browsers
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-        - name: Allure Report action from marketplace
-          uses: simple-elf/allure-report-action@master
-          id: allure-report
-          with:
-            allure_results: allure-results
-            gh_pages: gh-pages
-            allure_report: allure-report
-            allure_history: allure-history
+      # 🧪 Run Playwright tests
+      - name: Run Playwright tests
+        run: npm run test
 
-        - name: Deploy report to Github Pages
-          uses: peaceiris/actions-gh-pages@v4
-          with:
-            PERSONAL_TOKEN: ${{ secrets.TOKEN }}
-            PUBLISH_BRANCH: gh-pages
-            PUBLISH_DIR: allure-history
+      # 🧾 Get Allure history
+      - name: Get Allure history
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages
 
-        - name: Upload Test Result
-          uses: actions/upload-artifact@v4
-          with:
-            name: assets-for-download
-            path: allure-results
-            if-no-files-found: error
-            retention-days: 30
+      # 🧱 Generate Allure report
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@master
+        id: allure-report
+        with:
+          allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      # 🚀 Deploy to GitHub Pages
+      - name: Deploy report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          personal_token: ${{ secrets.TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
+
+      # 📤 Upload test artifacts
+      - name: Upload Test Result
+        uses: actions/upload-artifact@v4
+        with:
+          name: assets-for-download
+          path: allure-results
+          if-no-files-found: error
+          retention-days: 30
