--- a/.github/workflows/featureBranch.yaml
+++ b/.github/workflows/featureBranch.yaml
@@ -40,25 +40,29 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      # 🧪 Run Playwright tests
+      # 🧪 Run Playwright tests and store reports under artifacts/
       - name: Run Playwright tests
-        run: npm run test
+        run: |
+          mkdir -p artifacts
+          npx playwright test --reporter=allure-playwright,html --output=artifacts/playwright-report
+        env:
+          ALLURE_RESULTS_DIR: artifacts/allure-results
 
       # 🧾 Get Allure history
-      #- name: Get Allure history
-      #uses: actions/checkout@v4
-      #with:
-      #ref: gh-pages
-      #path: gh-pages
+      - name: Get Allure history
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages
 
       # 🧱 Generate Allure report
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
         id: allure-report
         with:
-          allure_results: allure-results
+          allure_results: artifacts/allure-results
           gh_pages: gh-pages
-          allure_report: allure-report
+          allure_report: artifacts/allure-report
           allure_history: allure-history
 
       # 🚀 Deploy to GitHub Pages
@@ -79,3 +83,12 @@ jobs:
           path: allure-results
           if-no-files-found: error
           retention-days: 30
+
+      # 🧾 Upload only Playwright HTML report for quick access
+      - name: Upload Playwright HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-html-report
+          path: artifacts/playwright-report
+          if-no-files-found: error
+          retention-days: 7
