--- a/.github/workflows/featureBranch.yaml
+++ b/.github/workflows/featureBranch.yaml
@@ -101,15 +101,16 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-      # 🧭 Post test summary with report links
+      # 🧭 Post test summary with dynamic report links
       - name: 📊 Post Allure Report Link
         if: always()
         run: |
+          REPO_URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
           echo "## 🎉 Test Summary" >> $GITHUB_STEP_SUMMARY
           echo "- 🧩 **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
           echo "- 🧑‍💻 **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "- 🕒 **Run Date:** $(date)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📈 Reports" >> $GITHUB_STEP_SUMMARY
-          echo "- 🔗 **Allure Report:** [View Live Report](https://n3kcr0n.github.io/PlaywrightFramework_AllureReports/)" >> $GITHUB_STEP_SUMMARY
-          echo "- 🔗 **Playwright HTML Report (Artifact):** Available in [Artifacts Section](#artifacts)" >> $GITHUB_STEP_SUMMARY
+          echo "- 🔗 **Allure Report:** [View Live Report](${REPO_URL})" >> $GITHUB_STEP_SUMMARY
+          echo "- 💾 **Playwright HTML Report:** Available in [Artifacts Section](#artifacts)" >> $GITHUB_STEP_SUMMARY
